# particleman

./: .gitignore  CMakeLists.txt
particlefx_header/: pman_force.h  pman_frustum.h  pman_main.h  pman_misc.h
particlefx_source/: pman_frustum.cpp  pman_main.cpp  pman_math.cpp  pman_particlemem.cpp  pman_triangleeffect.cpp
particleman/src/common/: Platform.h  crc.h  mathlib.h
particleman/src/engine/: mathlib.cpp
particleman/src/particleman/particlefx_header/: pman_force.h  pman_frustum.h  pman_main.h
particleman/src/particleman/particlefx_source/: pman_main.cpp  pman_math.cpp  pman_particlemem.cpp  pman_triangleeffect.cpp
particleman/src/public/: particleman.h  pman_particlemem.h  pman_triangleffect.h
